# Algebra-Solver

./: CMakeLists.txt  README.md
src/: main.cpp
